// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EndpointsFactory > .addExpressMiddleware() > Should transform errors 1`] = `
UnauthorizedError({
  "message": "This one has failed",
})
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with intersection middleware 1`] = `
{
  "_type": "ZodIntersection",
  "left": {
    "_type": "ZodIntersection",
    "left": {
      "_type": "ZodObject",
      "shape": {
        "n1": {
          "_type": "ZodNumber",
        },
      },
    },
    "right": {
      "_type": "ZodObject",
      "shape": {
        "n2": {
          "_type": "ZodNumber",
        },
      },
    },
  },
  "right": {
    "_type": "ZodObject",
    "shape": {
      "s": {
        "_type": "ZodString",
      },
    },
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with intersection middleware 2`] = `
{
  "_type": "ZodObject",
  "shape": {
    "b": {
      "_type": "ZodBoolean",
    },
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with refined object middleware 1`] = `
{
  "_type": "ZodIntersection",
  "left": {
    "_type": "ZodEffects",
    "value": {
      "_type": "ZodObject",
      "shape": {
        "a": {
          "_type": "ZodOptional",
          "value": {
            "_type": "ZodNumber",
          },
        },
        "b": {
          "_type": "ZodOptional",
          "value": {
            "_type": "ZodString",
          },
        },
      },
    },
  },
  "right": {
    "_type": "ZodObject",
    "shape": {
      "i": {
        "_type": "ZodString",
      },
    },
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with refined object middleware 2`] = `
{
  "_type": "ZodObject",
  "shape": {
    "o": {
      "_type": "ZodBoolean",
    },
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with simple middleware 1`] = `
{
  "_type": "ZodIntersection",
  "left": {
    "_type": "ZodObject",
    "shape": {
      "n": {
        "_type": "ZodNumber",
      },
    },
  },
  "right": {
    "_type": "ZodObject",
    "shape": {
      "s": {
        "_type": "ZodString",
      },
    },
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with simple middleware 2`] = `
{
  "_type": "ZodObject",
  "shape": {
    "b": {
      "_type": "ZodBoolean",
    },
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with union middleware 1`] = `
{
  "_type": "ZodIntersection",
  "left": {
    "_type": "ZodUnion",
    "options": [
      {
        "_type": "ZodObject",
        "shape": {
          "n1": {
            "_type": "ZodNumber",
          },
        },
      },
      {
        "_type": "ZodObject",
        "shape": {
          "n2": {
            "_type": "ZodNumber",
          },
        },
      },
    ],
  },
  "right": {
    "_type": "ZodObject",
    "shape": {
      "s": {
        "_type": "ZodString",
      },
    },
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with union middleware 2`] = `
{
  "_type": "ZodObject",
  "shape": {
    "b": {
      "_type": "ZodBoolean",
    },
  },
}
`;

exports[`EndpointsFactory > .buildVoid() > Should be a shorthand for empty object output 1`] = `
{
  "_type": "ZodObject",
  "shape": {},
}
`;

exports[`EndpointsFactory > .use() > Should transform errors 1`] = `
UnauthorizedError({
  "message": "This one has failed",
})
`;
